[gd_scene load_steps=5 format=3 uid="uid://njpgp1lv56qc"]

[ext_resource type="Script" path="res://Scripts/main_scene.gd" id="1_my7lj"]
[ext_resource type="Script" path="res://Scripts/ad_manager.gd" id="3_misdx"]
[ext_resource type="Script" path="res://addons/AdmobPlugin/Admob.gd" id="4_wq4r8"]
[ext_resource type="PackedScene" uid="uid://cntnmolkrjxrv" path="res://Scences/MainMenu.tscn" id="5_qrpdj"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_my7lj")

[node name="AdManager" type="Node" parent="."]
script = ExtResource("3_misdx")

[node name="Admob" type="Node" parent="."]
script = ExtResource("4_wq4r8")
child_directed = 1
under_age_of_consent = 1
debug_application_id = "ca-app-pub-3940256099942544~3347511713"
debug_rewarded_id = "ca-app-pub-3940256099942544/5224354917"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource("5_qrpdj")]
metadata/_edit_use_anchors_ = true

[connection signal="initialization_completed" from="Admob" to="AdManager" method="_on_admob_initialization_completed"]
[connection signal="rewarded_ad_dismissed_full_screen_content" from="Admob" to="AdManager" method="_on_admob_rewarded_ad_dismissed_full_screen_content"]
[connection signal="rewarded_ad_failed_to_load" from="Admob" to="AdManager" method="_on_admob_rewarded_ad_failed_to_load"]
[connection signal="rewarded_ad_failed_to_show_full_screen_content" from="Admob" to="AdManager" method="_on_admob_rewarded_ad_failed_to_show_full_screen_content"]
[connection signal="rewarded_ad_loaded" from="Admob" to="AdManager" method="_on_admob_rewarded_ad_loaded"]
[connection signal="rewarded_ad_showed_full_screen_content" from="Admob" to="AdManager" method="_on_admob_rewarded_ad_showed_full_screen_content"]
[connection signal="rewarded_ad_user_earned_reward" from="Admob" to="AdManager" method="_on_admob_rewarded_ad_user_earned_reward"]
[connection signal="play" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_play"]
